feat(native-needle): 接入 cactus-compute needle 引擎的 FFM 绑定
## 背景

上一版把 native-needle 修成"失败方式正确但功能为空"：门面能报清晰异常，
但没有任何 MethodHandle 绑定，仍不能推理。原因是当时认定 chua_native_needle
无源可编。实际上 needle 是 cactus-compute 的开源项目（cactus-compute/needle），
引擎以预编译二进制从 HuggingFace 分发，官方没有 Java 绑定，但公开了 C ABI。

ABI 取自官方 Python 包 cactus-needle 的 ctypes 绑定（needle/__init__.py::_lib），
共 5 个导出符号：

    int  needle_init(const char* system, const char* tools_json, const char* tool_index_path);
    int  needle_complete(const char* text, int max_new_tokens, char* out_buf, int out_buf_len);
    int  needle_embed(const char* text, float* out, int dim);
    void needle_reset(void);
    int  needle_load(const char* data, uint64_t len);

全部是纯 C POD 签名，用 FFM 直连，无需 JNI 胶水。

## 实现

新增 NeedleEngine：符号绑定 + 会话管理。

- 5 个符号经 Linker#downcallHandle 绑定；needle_embed 允许缺失
  （Needle 2 无此能力），其余缺失视为绑定失败并报明确原因。
- needle_load 收的是 .cact 归档字节而非路径，故直接以 MemorySegment 传入，
  不落临时文件；每个 JVM 进程至多加载一次。
- needle_complete 的输出缓冲区由调用方提供，默认 65536（与官方一致），
  可用 -Dchua.needle.buffer.size 调整；多分配 1 字节保证读字符串不越界。
- 失败码 < 0 时把引擎写进 out_buf 的原因带进异常，不再返回空串。

线程模型（引擎三处硬约束，已在类注释与 README 说明）：

- 引擎是进程级单例、无句柄，且权重一旦绑定无法卸载（官方明确：绑定 tuned
  权重后再调用 base 模型 agent 会直接抛错）。故用一把全局锁把
  init/complete/embed/reset 全部串行化。
- init 在 system 与 tools 未变时幂等，可每请求调用一次——
  NeedleChatClient#chatSync 正是这么调的，无需改动调用方。

NeedleNativeJniLoader 改用 SymbolLookup#libraryLookup 而非 System.load，
同一步拿到符号查找器，避免同一份库被两条路径重复加载；classpath 分支相应
改用 extractOnly(true) 只抽取不加载。库以 Arena.global() 加载，进程内不卸载。

新增 isReady()（库+权重）与 isLoaded()（仅库+符号）两级就绪判断，
避免调用方在缺件时只能靠捕获异常判断。

## 编译级别

FFM 自 JDK 22 转正。父 POM 未配置 maven.compiler.release，全部 17 个模块
默认落到 target 1.8，无法解析 SymbolLookup/Linker。本模块单独提升到 22，
不动父 POM 以免波及另外 16 个模块。运行时要求 JDK 22+（CI 为 temurin 25，
消费方 utils-support-deeplearning-needle-starter 为 release 25，无影响）。

## 验证

写了一个导出同样 5 个符号、按同样 ABI 编译的桩库（参数回显进输出缓冲区），
据此逐项断言真实传递结果，而非仅"调用没抛异常"：

- 动态库加载、符号解析、就绪状态流转
- 中文 prompt / system / tools 的 UTF-8 往返一致
- max_new_tokens 正确传递
- 引擎有状态：轮次递增；reset 后归 1
- init 幂等（同参不重建会话）、换 to